Refactor API endpoints to comply with REST conventions. Also merged in DP APIs to the sdk packge
