# src/main/java/ai/memas/memassdk/model/CorpusType.java
@@ -1,8 +1,8 @@
 /*
- * MeMaS CP APIs
- * This is the Control Plane client for MeMaS (Memory Management Service).  See https://github.com/memas-ai/MeMaS for more details.
+ * MeMaS APIs
+ * This is the Control Plane and Data Plane APIs for MeMaS (Memory Management Service). See https://github.com/memas-ai/MeMaS for more details.
  *
- * The version of the OpenAPI document: 0.1.0
+ * The version of the OpenAPI document: 0.1.1
  * Contact: max.yu@memas.ai
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
