# src/main/java/ai/memas/memassdk/model/MemorizeRequestAllOf.java
@@ -48,35 +48,35 @@ import java.util.Set;
 import ai.memas.memassdk.invoker.JSON;
 
 /**
- * CreateUserRequest
+ * MemorizeRequestAllOf
  */
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2023-12-17T15:47:50.270747166-08:00[America/Los_Angeles]")
-public class CreateUserRequest {
-  public static final String SERIALIZED_NAME_NAMESPACE_PATHNAME = "namespace_pathname";
-  @SerializedName(SERIALIZED_NAME_NAMESPACE_PATHNAME)
-  private String namespacePathname;
+public class MemorizeRequestAllOf {
+  public static final String SERIALIZED_NAME_CORPUS_PATHNAME = "corpus_pathname";
+  @SerializedName(SERIALIZED_NAME_CORPUS_PATHNAME)
+  private String corpusPathname;
 
-  public CreateUserRequest() {
+  public MemorizeRequestAllOf() {
   }
 
-  public CreateUserRequest namespacePathname(String namespacePathname) {
+  public MemorizeRequestAllOf corpusPathname(String corpusPathname) {
     
-    this.namespacePathname = namespacePathname;
+    this.corpusPathname = corpusPathname;
     return this;
   }
 
    /**
-   * Full namespace name, where child namespaces are appended after their parents&#39; names with &#39;.&#39;
-   * @return namespacePathname
+   * Full name of a corpus, specifying which namespace the corpus is under.  The name takes on the format of \\\&quot;&lt;namespace_pathname&gt;:&lt;corpus_name&gt;\\\&quot;
+   * @return corpusPathname
   **/
-  @javax.annotation.Nonnull
-  public String getNamespacePathname() {
-    return namespacePathname;
+  @javax.annotation.Nullable
+  public String getCorpusPathname() {
+    return corpusPathname;
   }
 
 
-  public void setNamespacePathname(String namespacePathname) {
-    this.namespacePathname = namespacePathname;
+  public void setCorpusPathname(String corpusPathname) {
+    this.corpusPathname = corpusPathname;
   }
 
 
@@ -89,20 +89,20 @@ public class CreateUserRequest {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    CreateUserRequest createUserRequest = (CreateUserRequest) o;
-    return Objects.equals(this.namespacePathname, createUserRequest.namespacePathname);
+    MemorizeRequestAllOf memorizeRequestAllOf = (MemorizeRequestAllOf) o;
+    return Objects.equals(this.corpusPathname, memorizeRequestAllOf.corpusPathname);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(namespacePathname);
+    return Objects.hash(corpusPathname);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class CreateUserRequest {\n");
-    sb.append("    namespacePathname: ").append(toIndentedString(namespacePathname)).append("\n");
+    sb.append("class MemorizeRequestAllOf {\n");
+    sb.append("    corpusPathname: ").append(toIndentedString(corpusPathname)).append("\n");
     sb.append("}");
     return sb.toString();
   }
@@ -125,42 +125,34 @@ public class CreateUserRequest {
   static {
     // a set of all properties/fields (JSON key names)
     openapiFields = new HashSet<String>();
-    openapiFields.add("namespace_pathname");
+    openapiFields.add("corpus_pathname");
 
     // a set of required properties/fields (JSON key names)
     openapiRequiredFields = new HashSet<String>();
-    openapiRequiredFields.add("namespace_pathname");
   }
 
  /**
   * Validates the JSON Object and throws an exception if issues found
   *
   * @param jsonObj JSON Object
-  * @throws IOException if the JSON Object is invalid with respect to CreateUserRequest
+  * @throws IOException if the JSON Object is invalid with respect to MemorizeRequestAllOf
   */
   public static void validateJsonObject(JsonObject jsonObj) throws IOException {
       if (jsonObj == null) {
-        if (!CreateUserRequest.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in CreateUserRequest is not found in the empty JSON string", CreateUserRequest.openapiRequiredFields.toString()));
+        if (!MemorizeRequestAllOf.openapiRequiredFields.isEmpty()) { // has required fields but JSON object is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in MemorizeRequestAllOf is not found in the empty JSON string", MemorizeRequestAllOf.openapiRequiredFields.toString()));
         }
       }
 
       Set<Entry<String, JsonElement>> entries = jsonObj.entrySet();
       // check to see if the JSON string contains additional fields
       for (Entry<String, JsonElement> entry : entries) {
-        if (!CreateUserRequest.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `CreateUserRequest` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
+        if (!MemorizeRequestAllOf.openapiFields.contains(entry.getKey())) {
+          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `MemorizeRequestAllOf` properties. JSON: %s", entry.getKey(), jsonObj.toString()));
         }
       }
-
-      // check to make sure all required properties/fields are present in the JSON string
-      for (String requiredField : CreateUserRequest.openapiRequiredFields) {
-        if (jsonObj.get(requiredField) == null) {
-          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonObj.toString()));
-        }
-      }
-      if (!jsonObj.get("namespace_pathname").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `namespace_pathname` to be a primitive type in the JSON string but got `%s`", jsonObj.get("namespace_pathname").toString()));
+      if ((jsonObj.get("corpus_pathname") != null && !jsonObj.get("corpus_pathname").isJsonNull()) && !jsonObj.get("corpus_pathname").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `corpus_pathname` to be a primitive type in the JSON string but got `%s`", jsonObj.get("corpus_pathname").toString()));
       }
   }
 
@@ -168,22 +160,22 @@ public class CreateUserRequest {
     @SuppressWarnings("unchecked")
     @Override
     public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
-       if (!CreateUserRequest.class.isAssignableFrom(type.getRawType())) {
-         return null; // this class only serializes 'CreateUserRequest' and its subtypes
+       if (!MemorizeRequestAllOf.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'MemorizeRequestAllOf' and its subtypes
        }
        final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
-       final TypeAdapter<CreateUserRequest> thisAdapter
-                        = gson.getDelegateAdapter(this, TypeToken.get(CreateUserRequest.class));
+       final TypeAdapter<MemorizeRequestAllOf> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(MemorizeRequestAllOf.class));
 
-       return (TypeAdapter<T>) new TypeAdapter<CreateUserRequest>() {
+       return (TypeAdapter<T>) new TypeAdapter<MemorizeRequestAllOf>() {
            @Override
-           public void write(JsonWriter out, CreateUserRequest value) throws IOException {
+           public void write(JsonWriter out, MemorizeRequestAllOf value) throws IOException {
              JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
              elementAdapter.write(out, obj);
            }
 
            @Override
-           public CreateUserRequest read(JsonReader in) throws IOException {
+           public MemorizeRequestAllOf read(JsonReader in) throws IOException {
              JsonObject jsonObj = elementAdapter.read(in).getAsJsonObject();
              validateJsonObject(jsonObj);
              return thisAdapter.fromJsonTree(jsonObj);
@@ -194,18 +186,18 @@ public class CreateUserRequest {
   }
 
  /**
-  * Create an instance of CreateUserRequest given an JSON string
+  * Create an instance of MemorizeRequestAllOf given an JSON string
   *
   * @param jsonString JSON string
-  * @return An instance of CreateUserRequest
-  * @throws IOException if the JSON string is invalid with respect to CreateUserRequest
+  * @return An instance of MemorizeRequestAllOf
+  * @throws IOException if the JSON string is invalid with respect to MemorizeRequestAllOf
   */
-  public static CreateUserRequest fromJson(String jsonString) throws IOException {
-    return JSON.getGson().fromJson(jsonString, CreateUserRequest.class);
+  public static MemorizeRequestAllOf fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, MemorizeRequestAllOf.class);
   }
 
  /**
-  * Convert an instance of CreateUserRequest to an JSON string
+  * Convert an instance of MemorizeRequestAllOf to an JSON string
   *
   * @return JSON string
   */
