# src/main/java/ai/memas/memassdk/model/NamespaceDoesNotExistError.java
@@ -1,8 +1,8 @@
 /*
- * MeMaS CP APIs
- * This is the Control Plane client for MeMaS (Memory Management Service).  See https://github.com/memas-ai/MeMaS for more details.
+ * MeMaS APIs
+ * This is the Control Plane and Data Plane APIs for MeMaS (Memory Management Service). See https://github.com/memas-ai/MeMaS for more details.
  *
- * The version of the OpenAPI document: 0.1.0
+ * The version of the OpenAPI document: 0.1.1
  * Contact: max.yu@memas.ai
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -50,7 +50,7 @@ import ai.memas.memassdk.invoker.JSON;
 /**
  * Error returned when the namespace object (corpus/user) does not exist
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2023-09-14T01:40:43.222482928-07:00[America/Los_Angeles]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", date = "2023-12-17T15:47:50.270747166-08:00[America/Los_Angeles]")
 public class NamespaceDoesNotExistError {
   /**
    * Gets or Sets errorCode
